# graph-based-ai-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml
.agent/rules/: CLAUDE.md
.claude/: settings.local.json
.github/workflows/: backend.yml  frontend.yml
backend/: Dockerfile  list_routes.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  canva.py  graphs.py  health.py  uploads.py  workflows.py
backend/app/core/: config.py  docs.py  errors.py  llm.py  logging.py  mcp.py
backend/app/db/: database.py
backend/app/models/: graph.py  state.py  workflow.py
backend/app/schemas/: canva.py  export.py  graph.py  input.py  workflow.py
backend/app/services/: canva_node_service.py  canva_service.py  export_service.py  graph_service.py  input_service.py  llm_transform_service.py  workflow_service.py
backend/app/utils/: image_utils.py
backend/tests/: conftest.py  test_canva_node_service.py  test_canva_service.py  test_export_service.py  test_health.py  test_image_utils.py  test_input_service.py  test_llm_transform_service.py
backend/tests/integration/: test_canva_pipeline.py
docs/: PHASE1_CANVA_INTEGRATION_PLAN.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Icons.tsx
frontend/src/config/: env.ts
frontend/src/constants/: llm.ts  styles.ts
(+18 files in other folders)
